<resources>
    <string name="app_name">Vendor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Settings -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="master_switch">master_switch</string>
    <string name="scan_discounts">scan_discounts</string>
    <string name="allow_your_users_to_edit_discounts">allow_your_users_to_edit_discounts</string>
    <string name="send_discount_updates">send_discount_updates</string>
    <string name="receive_notice_of_activated_discounts">receive_notice_of_activated_discounts</string>


    <string name="db_users">users</string>
</resources>
